--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,17 @@
     <string name="you_might_like">You might like...</string>
     <string name="_99_cookmarked">99+ Cookmarked</string>
     <string name="chicken_cordon_bleu">Chicken Cordon Bleu</string>
+    <string name="https_sample_link">https://sample.link</string>
+    <string name="recipe_url">Recipe URL</string>
+    <string name="_1_lorem_2_ipsum_3_dolor_4_amet">1. Lorem 2. Ipsum 3. Dolor 4. Amet</string>
+    <string name="cooking_steps">Cooking Steps</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="_4_servings">4 Servings</string>
+    <string name="western">Western</string>
+    <string name="_1_hr_30_min">1 hr 30 min</string>
+    <string name="servings">Servings</string>
+    <string name="food_type">Food Type</string>
+    <string name="time_to_make">Time to make</string>
 
 
     <string-array name="options_array">
