--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
     <string name="app_name">Cookmark.</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="log_in"><u>Log In</u></string>
-    <string name="HorizontalLineOr1"><u>\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</u></string>
-    <string name="HorizontalLineOr2"><u>\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</u></string>
     <string name="registerBtn"><u>Register</u></string>
+    <string name="HorizontalLineOr"><u>\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0</u></string>
     <string name="enter_your_email">Enter your email</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="see_all"><u>see all</u></string>
+    <string name="msg_token_fmt">FCM Token: %1$s</string>
 
     <string-array name="options_array">
         <item>Please select an option</item>
